# Foldiff_rs

./: Cargo.toml  README.md  config.txt
src/: args.rs  comparison_report.rs  entries_cmp.rs  lib.rs  main.rs  minigrep.rs
